// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BookTextArea/> renders "Loading..." correctly when isLoadingBook 1`] = `
<div>
  Loading...
</div>
`;

exports[`<BookTextArea/> renders book content correctly when book loaded 1`] = `
<div>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "this is chapter 1",
      }
    }
  />
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "this is chapter 2",
      }
    }
  />
</div>
`;

exports[`<BookTextArea/> renders correctly when book loaded 1`] = `
<div>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "this is chapter 1",
      }
    }
  />
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "this is chapter 2",
      }
    }
  />
</div>
`;

exports[`<BookTextArea/> renders to "No book chosen yet" when book not loaded correctly 1`] = `
<div>
  No book chosen yet
</div>
`;

exports[`<BookTextArea/> renders to "No book chosen yet" when no book loaded yet 1`] = `
<div>
  No book chosen yet
</div>
`;
